Fix GitHub action

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   validate:
     name: Validate
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         terraform-versions: ["0.12.x", "0.13.x"]
