--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        terraform-versions: ["0.13.x", "0.14.x"]
+        terraform-versions: ["0.13.x", "0.14.x", "1.0.x"]
 
     steps:
       - name: Checkout
